@startuml

set separator none
package song.controller {
    class SongController <<Function Group>> {
        + {static} addSong(req: Request, res: Response): RequestHandler
        + {static} getAllSongs(req: Request, res: Response): RequestHandler
        + {static} getSongByID(req: Request, res: Response): RequestHandler
        + {static} generatePresignedDownloadURL(req: Request, res: Response): RequestHandler
        + {static} generatePresignedUploadURL(req: Request, res: Response): RequestHandler
        + {static} updateSong(req: Request, res: Response): RequestHandler
        + {static} deleteSong(req: Request, res: Response): RequestHandler
    }
}

package services {
    class Redis <<Singleton>> {
        - client: UpstashRedis

        + set<T>(key: string, data: T, options?: SetCommandOptions): Promise<"OK" | T | null>
        + get<T>(key: string): Promise<T | null>
        + del(keys: string[]): Promise<void>
    }
    class Cloudinary <<Singleton>> {
        + upload(file: Express.Multer.File,folder: string,id: string): Promise<string>
        + delete(folder: string, fileName: string): Promise<void>
    }
    class BackBlaze <<Singleton>> {
        - client: S3Client {readOnly}

        + generatePresignedDownloadURL(fileName: string,expiresIn: number): Promise<string>
        + generatePresignedUploadURL(fileName: string,expiresIn: number): Promise<string>
        + deleteObject(fileName: string): Promise<void>
    }
}

SongController ..> Redis
SongController ..> Cloudinary
SongController ..> BackBlaze

@enduml